--- a/package.json
+++ b/package.json
@@ -8,19 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "autoprefixer": "^9.6.0",
     "core-js": "^2.6.5",
-    "image-webpack-loader": "^4.6.0",
+    "file-saver": "^2.0.2",
+    "image-webpack-loader": "5.0.0",
+    "jquery": "^3.4.1",
+    "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.13",
     "path": "^0.12.7",
+    "postcss-px2rem": "^0.3.0",
+    "px2rem-loader": "^0.1.9",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-fullpage.js": "^0.1.3",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-seamless-scroll": "^1.1.16",
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.0.1",
+    "webpack": "^4.32.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
-    "@vue/cli-plugin-eslint": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^7.0.0-beta.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
